--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
     <artifactId>vatbubgitreports</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>vatbubgitreports Maven Webapp</name>
+    <name>vatbubgitreports</name>
     <url>https://vatbubgitreports.herokuapp.com/</url>
     <dependencies>
         <dependency>
