--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@
 GitHub_Client_ID=githubClientId
 GitHub_Secret=githubSecret
 GitHub_AccessToken=githubAccessToken
+GitHub_UserName=githubUserName
+GitHub_Password=githubPassword
