--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
 cache:
   directories:
   - "$HOME/.m2"
-install: echo Install phase has been disabled as a complete build is run during deployment
+install: mvn -v
 script: mvn package
 branches:
   only:
