--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>fluent-hc</artifactId>
-            <version>4.5.2</version>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.5</version>
         </dependency>
-
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
@@ -128,6 +127,44 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <file>target/classes/application.properties</file>
+                    <replacements>
+                        <replacement>
+                            <token>githubClientId</token>
+                            <value>${env.GITHUB_CLIENT_ID}</value>
+                        </replacement>
+                        <replacement>
+                            <token>githubSecret</token>
+                            <value>${env.GITHUB_SECRET}</value>
+                        </replacement>
+                        <replacement>
+                            <token>githubAccessToken</token>
+                            <value>${env.GITHUB_ACCESS_TOKEN}</value>
+                        </replacement>
+                        <replacement>
+                            <token>githubUserName</token>
+                            <value>${env.GITHUB_USER_NAME}</value>
+                        </replacement>
+                        <replacement>
+                            <token>githubPassword</token>
+                            <value>${env.GITHUB_PASSWORD}</value>
+                        </replacement>
+                    </replacements>
+                </configuration>
             </plugin>
         </plugins>
     </build>
