--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ after_success:
   - git config --global user.name $GH_USER_NAME
   - git add CHANGELOG.md
   - git commit -m "[skip ci] Updated Changelog"
-  - git push git@github.com:vatbub/defaultRepo.git master
+  - git push git@github.com:vatbub/vatbubgitreports2.git master
 branches:
   only:
   - master
