--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,6 @@
             <url>http://dl.bintray.com/vatbub/fokprojectsReleases</url>
         </repository>
         <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-vatbub-fokprojectsSnapshots</id>
-            <name>bintray</name>
-            <url>http://dl.bintray.com/vatbub/fokprojectsSnapshots</url>
-        </repository>
-        <repository>
             <snapshots/>
             <id>snapshots</id>
             <name>libs-snapshot</name>
@@ -30,7 +22,7 @@
     <parent>
         <groupId>com.github.vatbub</groupId>
         <artifactId>parentPom</artifactId>
-        <version>0.0.21-SNAPSHOT</version>
+        <version>0.0.22-SNAPSHOT</version>
     </parent>
 
     <scm>
@@ -69,8 +61,13 @@
         </dependency>
         <dependency>
             <groupId>com.github.vatbub</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.24-SNAPSHOT</version>
+            <artifactId>common.internet</artifactId>
+            <version>0.0.25-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.vatbub</groupId>
+            <artifactId>common.view.reporting</artifactId>
+            <version>0.0.25-SNAPSHOT</version>
         </dependency>
 
         <dependency>
